M2 phase 6: parser CLI, and a determinism bug only it could find
Adds the CLI BUILD_PLAN puts before the HTTP layer: point it at a directory and
dump the §8 JSON, so the edges get eyeballed on code the author knows before
anything is built on top of them.

ParseResponse / ParseDiagnostics / ParseResponseMapper are the §8 wire contract,
shared with phase 7's endpoint so the CLI and HTTP cannot drift. Diagnostics lead
with nonExternalUnresolvedRate, the metric that alerts, rather than the raw
counts.

The CLI immediately earned its place by finding a determinism bug that NO
in-process test could have caught. Map.copyOf returns an immutable map whose
iteration order comes from a random salt chosen once per JVM. Within one JVM that
salt is constant, so extract().equals(extract()) passed and every determinism
test was green — while two CLI runs over the same commit emitted different bytes,
because annotation values and surface attrs were being copied through it. That is
a §8 purity violation: graph versions keyed by commit SHA would not have been
reproducible across processes, and M3's atomic swap assumes they are.

Fixed by keeping sorted unmodifiable maps instead. Verified: three separate JVM
invocations over petclinic now produce byte-identical JSON (997,728 bytes).
DeterministicOrderingTest pins the invariant as "iteration order is sorted",
because equality cannot express it — two equal maps may still iterate
differently, which is exactly how this hid.

Also fixed a second bug the CLI surfaced: --summary without --dir fell through to
SpringApplication.run and bound a port instead of printing usage. That reads as
an unexplained hang, and cost a ten-minute timeout when I hit it. Detection now
covers every CLI flag; Spring's own --server.port style arguments are untouched.

Streams are pinned to UTF-8 rather than trusting the console default: on Windows
a legacy code page mangles non-ASCII bytes, which for output piped to a file and
compared byte-for-byte is corruption,