@@ -1,9 +1,11 @@
 package com.impact.parser.graph;
 
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.TreeMap;
 
 /**
  * Accumulates surfaces, collapsing repeats.
@@ -18,7 +20,11 @@ public final class SurfaceCollector {
     private final Map<String, Surface> surfaces = new LinkedHashMap<>();
 
     public void add(String key, SurfaceKind kind, Map<String, String> attrs) {
-        surfaces.putIfAbsent(key, new Surface(key, kind, Map.copyOf(attrs)));
+        // Sorted and unmodifiable, never Map.copyOf — that returns a map whose
+        // iteration order comes from a per-JVM random salt, which would make the
+        // same commit serialise to different bytes in different processes.
+        surfaces.putIfAbsent(
+                key, new Surface(key, kind, Collections.unmodifiableMap(new TreeMap<>(attrs))));
     }
 
     /** Every collected surface, sorted for determinism. */
